--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,21 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #3C3D37;
+  --foreground: #ededed;
+  --artotel: #e31d47;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #3C3D37;
     --foreground: #ededed;
+    --artotel: #e31d47;
   }
 }
 
 body {
-  color: var(--foreground);
+  color: var(--background);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -24,4 +26,21 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+/* animation */
+@keyframes zoom {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.zoom-animation {
+  animation: zoom 1.5s infinite;
 }
